# hoshino.nb2

./: .env.prod.example  .gitignore  README.md  pyproject.toml  requirements.txt  run.py
docs/: notes.md
docs/superpowers/plans/: 2026-05-13-weibo-comprehensive-refactor.md
docs/superpowers/specs/: 2026-05-13-weibo-init-breakup-design.md
hoshino/: __init__.py  aio_req.py  bootstrap.py  config.py  event.py  hooks.py  log.py  logger_wrapper.py  matcher.py  message.py  permission.py  res.py  rule.py  schedule.py  service.py  types.py  typing.py  util.py
hoshino/base/: broadcast.py  cookies.py  image.py  listenmeta.py  ls.py  schedule_manage.py  service_manage.py  test.py  zai.py
hoshino/base/black/: __init__.py  data.py
hoshino/base/service_manage/: __init__.py  util.py
hoshino/modules/develop/: __init__.py  echo.py  echoandsay.py  gorestart.py  healthchecker.py  server_info.py
hoshino/modules/entertainment/: 5000choyen.py  __init__.py  arc.py  ba.py  bihua.py  chengfenji.py  cloudmusic.py  coser.py  dice.py  dragonking.py  drangonking.py  high_eq.py  shindan.py  vtbs.json  yincha.py
hoshino/modules/entertainment/throwandcreep/: __init__.py  util.py
hoshino/modules/information/: utils.py
hoshino/modules/information/bilireq/: __init__.py  buvid.py  cookies.py  pw.py  render.py  utils.py  wbi.py
hoshino/modules/information/pushlive/: __init__.py  bilibili.py  db.py  douyu.py  model.py
hoshino/modules/information/resolve/: __init__.py  bilidata.py  data.py  douyin.py  sv.py  weibo.py  xiaohongshu.py
hoshino/modules/information/rsspush/: __init__.py  data.py
hoshino/modules/information/steam/: __init__.py  subscribes.json
hoshino/modules/information/twireq/: __init__.py  util.py
hoshino/modules/information/weibo/: __init__.py  db.py  fav.py  post.py  pw.py  request.py  resolve.py  sub.py  sv.py  utils.py
hoshino/modules/interactive/: chat.py  chooseone.py  poke.py  wangyiyun.py
hoshino/modules/interactive/QA/: __init__.py  data.py
hoshino/modules/interactive/alisten/: __init__.py  util.py
hoshino/modules/priconne/: .gitignore  __init__.py  _pcr_data_sample.py  arena-reminder.py  chara_sample.json  query.py  whois.py  yobot.py
hoshino/modules/steam/: steam.py
hoshino/modules/test/: testmodule2.py
hoshino/modules/tools/: anti_qks.py  b64.py  hitokoto_hourcall.py  nbnhhsh.py  ocr.py
hoshino/modules/tools/resolve/: data.py  (+1 more)
hoshino/service_config_sample/: gacha.json  pcr-arena.json  qbitorrent.json  yobot.json
hoshino/util/: __init__.py  aio_req.py  aiohttpx.py  aiorequests.py  bitly.py  mobile.js  playwrights.py
(+31 files in other folders)
