[tool.poetry]
name = "hoshino-nb2"
version = "0.1.0"
description = "HoshinoBot on NoneBot2"
authors = ["AkiraXie"]
license = "GPL-3"
readme = "README.md"
packages = [{include = "hoshino"}]

[tool.poetry.dependencies]
python = "^3.10"
peewee = "^3.14.0"
aiohttp = "^3.9.3"
zhconv = "^1.4.1"
requests = "^2.25.1"
nonebot-adapter-onebot = "~2.4.0"
nonebot2 = {version = "~2.3.0", extras = ["fastapi"]}
numpy = "^1.20.1"
pillow = "^11.0.0"
nonebot-plugin-apscheduler = "0.5.0"
beautifulsoup4 = "^4.12.3"
brotli = "^1.0.9"
psutil = "^5.8.0"
playwright = "~1.48.0"
pypinyin = "^0.50.0"
cython = "<3.0.0"
nonebot-bison = "^0.9.7"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
