[tool.poetry]
name = "hoshino-nb2"
version = "0.1.0"
description = "HoshinoBot on NoneBot2"
authors = ["AkiraXie"]
license = "GPL-3"
readme = "README.md"
packages = [{include = "hoshino"}]

[tool.poetry.dependencies]
python = "^3.10"
peewee = "^3.14.0"
zhconv = "^1.4.1"
nonebot-adapter-onebot = "~2.4.0"
nonebot2 = {version = "~2.3.0", extras = ["fastapi"]}
pillow = "^11.0.0"
nonebot-plugin-apscheduler = "0.5.0"
beautifulsoup4 = "^4.12.3"
psutil = "^5.8.0"
playwright = "~1.48.0"
lxml = "^5.4.0"
httpx = "^0.28.1"
pytz = "^2025.2"
types-html5lib = "^1.1.11.20250516"
simplejson = "^3.20.1"
sqlalchemy = "^2.0.41"
aiosqlite = "^0.21.0"
urllib3 = "^2.4.0"


[tool.poetry.group.dev.dependencies]
ruff = "^0.11.12"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
